[package]
name = "ziprs"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "unwind"

# Optimize for size
[profile.release]
panic = "unwind"
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
zip = { path = "../zip", features = ["deflate-miniz", "bzip2", "zstd"], default-features = false }
catch_panic = { git = "https://github.com/rushiiMachine/catch_panic.git", rev = "7ce5a28" } # https://github.com/sorz/catch_panic/pull/1
thiserror = "2.0.12"
jni_fn = "0.1.2"
jni = "0.21.1"
paste = "1.0.15"
android_log = "0.1.3"
log = "0.4.27"
