[package]
name = "zip"
version = "0.6.2"
authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>", "Marli Frost <marli@frost.red>", "Ryan Levick <ryan.levick@gmail.com>"]
license = "MIT"
repository = "https://github.com/zip-rs/zip.git"
keywords = ["zip", "archive"]
description = """
Library to support the reading and writing of zip files.
"""
edition = "2018"

[dependencies]
aes = { version = "0.8.4", optional = true }
byteorder = "1.5.0"
bzip2 = { version = "0.5.2", optional = true }
constant_time_eq = { version = "0.4.2", optional = true }
crc32fast = "1.3.2"
flate2 = { version = "1.1.2", default-features = false, optional = true }
hmac = { version = "0.12.1", optional = true, features = ["reset"] }
pbkdf2 = {version = "0.12.2", optional = true }
sha1 = {version = "0.10.6", optional = true }
time = { version = "0.3.40", features = ["formatting", "macros" ], optional = true }
zstd = { version = "0.13.3", optional = true }

[target.'cfg(any(all(target_arch = "arm", target_pointer_width = "32"), target_arch = "mips", target_arch = "powerpc"))'.dependencies]
crossbeam-utils = "0.8.8"

[dev-dependencies]
bencher = "0.1.5"
walkdir = "2.3.2"

[features]
aes-crypto = [ "aes", "constant_time_eq", "hmac", "pbkdf2", "sha1" ]
deflate = ["flate2/rust_backend"]
deflate-miniz = ["flate2/default"]
deflate-zlib = ["flate2/zlib"]
unreserved = []
default = ["aes-crypto", "bzip2", "deflate", "time", "zstd"]
