[package]
name = "ziprs"
version = "1.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
thiserror = "1.0.30"
jni = "0.19.0"
jni_fn = { git = "https://gitlab.com/antonok/jni_fn", branch = "overload-disambiguation" }
zip = { version = "0.6.0", features = ["deflate-miniz"], default-features = false }
